<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">akt-notes</string>
    <string name="title_activity_new_item">NewItem</string>
  	<string name="title_activity_edit_mode">EditMode</string>
   	<string name="title_activity_email">EmailActivity</string>
    <string name="to_do_list">To Do List</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>
    <string name="action_done">Done</string>
    <string name="action_email">Email</string>
    <string name="action_archive">Archive</string>
    <string name="action_delete">Delete</string>
    <string name="action_summary">Summary</string>
    <string name="hint_new_item">Add New Item</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="email_items_title">To Do Items</string>
    <string name="email_archive_title">Archived</string>

</resources>
